AWE/src/objects/Rule__c.object
<CustomObject>
    <description>Object to hold the basic information (header ) of the rule. It is related to Rule Actions and Criteria</description>
    <fields>
        <fullName>AdvanceWorkflow__c</fullName>
        <formula>IF( ISBLANK(Advance_Workflow__c  ),null, HYPERLINK(&quot;apex/AW_ListRules_VF?id=&quot; &amp; Advance_Workflow__c, Advance_Workflow__r.Name))</formula>
        <label>Advance Workflow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advance_Workflow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advance Workflow</label>
        <referenceTo>Advance_Workflow__c</referenceTo>
        <relationshipLabel>Rules</relationshipLabel>
        <relationshipName>Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DisplayActions__c</fullName>
        <description>This is field is update via trigger AW_trg_RuleAction everytime an action is updated or inserted The purpose of the field is to show ALL actions of a rule in a summary level as follows :
Collect all actions assigned to the rule 
Each rule action will be displayed in separate line in URL format  
For each action show the first 100 chars by concatenating the fields  Type__c&amp;&amp; Related_Object__c &amp;&amp; DispalyField__c with a &quot;...&quot;  in URL Format 
The URL would take the user to this Rule Action Display Page for the Rule Action ID
If you hover on that you get show the full value of RuleAction__c.DisplayfilterLogic__c present</description>
        <label>Display Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DisplayfilterLogic__c</fullName>
        <description>Captures  logic expression  using the fileds of the defined rule criteria as operands ( rule criteria ) For Example : if a rule had 3 criteria : Criteria 1 ( Industry  =   &apos;Banking&apos; ) , Criteria 2 (Country=&apos;United States&apos;) , Criteria 3 (Type=&apos;Active&apos;  ) the Display Filter logic for  : Criteria  1 AND Criteria  2 OR Criteria  3   would be   Industry  =   &apos;Banking&apos; AND Country=&apos;United States&apos; OR Type=&apos;Active&apos;
During save the DisplayfilterLogic is calculated based on the value captured on  the Filter_Logic value ( 1 AND 2 OR 3 ) The calcuation derives the field name of the rule criteria  for the positional operators. The field is used for display purposes  to the user</description>
        <label>Rule Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evaluation_Rule__c</fullName>
        <label>Evaluation Rule</label>
        <picklist>
            <picklistValues>
                <fullName>Record is created or edited and did not previously meet the rule criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record is created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record is created or edited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Click Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Execution_Behavior__c</fullName>
        <label>Execution Behavior</label>
        <picklist>
            <picklistValues>
                <fullName>Execute Rule and Continue to Next Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execute Rule and Exit</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Filter_Logic__c</fullName>
        <description>Captures the logic based on position of the rule criteria For Example : if a rule had 3 criteria : Criteria 1, Criteria 2, Criteria 3  the Filter logic could be : 1 AND 2 OR 3</description>
        <inlineHelpText>Captures the logic based on position of the rule criteria For Example : if a rule had 3 criteria : Criteria 1, Criteria 2, Criteria 3  the Filter logic could be : 1 AND 2 OR 3</inlineHelpText>
        <label>Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormattedFilterLogic__c</fullName>
        <description>Captures  logic expression  using the Salesforce Unique IDs of the defined rule criteria as operands ( rule criteria ) For Example : if a rule had 3 criteria : Criteria 1 (a0NA000000Rt5nTMAR ) , Criteria 2 (a0NA000000Rt5nYMAR ) , Criteria 3 (a0NA000000Rt5nYMAR  ) the Formatted Filter logic for  : Criteria  1 AND Criteria  2 OR Criteria  3   would be  a0NA000000Rt5nTMAR AND a0NA000000Rt5nYMAR OR a0NA000000Rt5nnMAB
During save the FormatedFilterLogic is calculated based on the value captured on  the Filter_Logic value ( 1 AND 2 OR 3 ) The calcuation derives the SFDC id for the positional operators. The field is used hidden to the user and serves to &quot;map&quot; the logic expression with the criteria records</description>
        <label>FormattedFilterLogic</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Import_Code__c</fullName>
        <label>Import Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Actions__c</fullName>
        <label>Total Actions</label>
        <summaryForeignKey>RuleAction__c.Rule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Criteria__c</fullName>
        <label>Total Criteria</label>
        <summaryForeignKey>RuleCriteria__c.Rule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Rule</label>
    <listViews>
        <fullName>Account</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Status__c</columns>
        <columns>Version__c</columns>
        <columns>Evaluation_Rule__c</columns>
        <columns>Execution_Behavior__c</columns>
        <columns>DisplayfilterLogic__c</columns>
        <columns>Description__c</columns>
        <columns>Total_Actions__c</columns>
        <columns>Total_Criteria__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>Account</label>
    </listViews>
    <listViews>
        <fullName>AccountImp</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Status__c</columns>
        <columns>Version__c</columns>
        <columns>Evaluation_Rule__c</columns>
        <columns>Execution_Behavior__c</columns>
        <columns>DisplayfilterLogic__c</columns>
        <columns>Description__c</columns>
        <columns>Total_Actions__c</columns>
        <columns>Total_Criteria__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>&apos;</value>
        </filters>
        <label>AccountImp</label>
    </listViews>
    <listViews>
        <fullName>AccountSendEmail</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Status__c</columns>
        <columns>Version__c</columns>
        <columns>Evaluation_Rule__c</columns>
        <columns>Execution_Behavior__c</columns>
        <columns>DisplayfilterLogic__c</columns>
        <columns>Description__c</columns>
        <columns>Total_Actions__c</columns>
        <columns>Total_Criteria__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Email</value>
        </filters>
        <label>AccountSendEmail</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Order__c</columns>
        <columns>Status__c</columns>
        <columns>FormattedFilterLogic__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AthenaActive</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Evaluation_Rule__c</columns>
        <columns>Execution_Behavior__c</columns>
        <columns>DisplayfilterLogic__c</columns>
        <columns>Description__c</columns>
        <columns>Total_Actions__c</columns>
        <columns>Total_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Case</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>CS (AM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Athena Case  Rules Active</label>
    </listViews>
    <listViews>
        <fullName>AthenaDraft</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Evaluation_Rule__c</columns>
        <columns>Execution_Behavior__c</columns>
        <columns>DisplayfilterLogic__c</columns>
        <columns>Description__c</columns>
        <columns>Total_Actions__c</columns>
        <columns>Total_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Case</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>CS (AM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Athena Case  Rules -Draft</label>
    </listViews>
    <listViews>
        <fullName>CaseRules</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Order__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Evaluation_Rule__c</columns>
        <columns>Execution_Behavior__c</columns>
        <columns>DisplayfilterLogic__c</columns>
        <columns>Total_Criteria__c</columns>
        <columns>Total_Actions__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Case</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>CS (AM</value>
        </filters>
        <label>Case  Rules</label>
    </listViews>
    <listViews>
        <fullName>Contact</fullName>
        <columns>Order__c</columns>
        <columns>NAME</columns>
        <columns>Version__c</columns>
        <columns>Status__c</columns>
        <columns>Filter_Logic__c</columns>
        <columns>Object__c</columns>
        <columns>Total_Actions__c</columns>
        <columns>Total_Criteria__c</columns>
        <columns>Advance_Workflow__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <label>Contact</label>
    </listViews>
    <listViews>
        <fullName>FPVR</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Status__c</columns>
        <columns>Version__c</columns>
        <columns>Evaluation_Rule__c</columns>
        <columns>Execution_Behavior__c</columns>
        <columns>DisplayfilterLogic__c</columns>
        <columns>Description__c</columns>
        <columns>Total_Actions__c</columns>
        <columns>Total_Criteria__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>startsWith</operation>
            <value>FPVR</value>
        </filters>
        <label>FPVR</label>
    </listViews>
    <listViews>
        <fullName>LeadDraftRules</fullName>
        <columns>NAME</columns>
        <columns>Import_Code__c</columns>
        <columns>Object__c</columns>
        <columns>Order__c</columns>
        <columns>Evaluation_Rule__c</columns>
        <columns>Execution_Behavior__c</columns>
        <columns>DisplayfilterLogic__c</columns>
        <columns>Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Total_Actions__c</columns>
        <columns>Total_Criteria__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Lead</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Lead Draft Rules</label>
    </listViews>
    <listViews>
        <fullName>LeadRules</fullName>
        <columns>NAME</columns>
        <columns>Import_Code__c</columns>
        <columns>Object__c</columns>
        <columns>Order__c</columns>
        <columns>Evaluation_Rule__c</columns>
        <columns>Execution_Behavior__c</columns>
        <columns>DisplayfilterLogic__c</columns>
        <columns>Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Total_Actions__c</columns>
        <columns>Total_Criteria__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Lead</value>
        </filters>
        <label>Lead Rules</label>
    </listViews>
    <listViews>
        <fullName>Milestone1_Milestone</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Status__c</columns>
        <columns>Version__c</columns>
        <columns>Evaluation_Rule__c</columns>
        <columns>Execution_Behavior__c</columns>
        <columns>DisplayfilterLogic__c</columns>
        <columns>Description__c</columns>
        <columns>Total_Actions__c</columns>
        <columns>Total_Criteria__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>startsWith</operation>
            <value>Milestone1_Milestone__c</value>
        </filters>
        <label>Milestone1_Milestone</label>
    </listViews>
    <listViews>
        <fullName>Milestone1_Project</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Status__c</columns>
        <columns>Version__c</columns>
        <columns>Evaluation_Rule__c</columns>
        <columns>Execution_Behavior__c</columns>
        <columns>DisplayfilterLogic__c</columns>
        <columns>Description__c</columns>
        <columns>Total_Actions__c</columns>
        <columns>Total_Criteria__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>startsWith</operation>
            <value>Milestone1_Project__c</value>
        </filters>
        <label>Milestone1 Project</label>
    </listViews>
    <listViews>
        <fullName>Milestone1_Task</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Status__c</columns>
        <columns>Version__c</columns>
        <columns>Evaluation_Rule__c</columns>
        <columns>Execution_Behavior__c</columns>
        <columns>DisplayfilterLogic__c</columns>
        <columns>Description__c</columns>
        <columns>Total_Actions__c</columns>
        <columns>Total_Criteria__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>startsWith</operation>
            <value>Milestone1_Task__c</value>
        </filters>
        <label>Milestone1 Task</label>
    </listViews>
    <listViews>
        <fullName>OnClickEvent</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Status__c</columns>
        <columns>Version__c</columns>
        <columns>Evaluation_Rule__c</columns>
        <columns>Execution_Behavior__c</columns>
        <columns>DisplayfilterLogic__c</columns>
        <columns>Description__c</columns>
        <columns>Total_Actions__c</columns>
        <columns>Total_Criteria__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Evaluation_Rule__c</field>
            <operation>equals</operation>
            <value>On Click Event</value>
        </filters>
        <label>On Click Even</label>
    </listViews>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CannotAddRuleToAvailableAdvanceWorkflow</fullName>
        <active>true</active>
        <description>User will NOT be able to add additional rules to the available Workflow if Workflow  is disabled</description>
        <errorConditionFormula>ISCHANGED(Advance_Workflow__c) &amp;&amp;! Advance_Workflow__r.Enabled__c</errorConditionFormula>
        <errorMessage>New rules cannot be added to a disabled  Workflow</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Description_is_required</fullName>
        <active>true</active>
        <description>Description_is_required</description>
        <errorConditionFormula>ISBLANK(Description__c )</errorConditionFormula>
        <errorMessage>Description is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Evaluation_Rule_Can_not_be_Blank</fullName>
        <active>true</active>
        <description>Evaluation Rule Criteria is blank</description>
        <errorConditionFormula>ISBLANK(TEXT(Evaluation_Rule__c ))</errorConditionFormula>
        <errorMessage>Evaluation Rule Criteria is blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unique_Rule_Name</fullName>
        <active>true</active>
        <errorConditionFormula>IF( (ISNEW() ||  ISCHANGED(Name)) &amp;&amp; Name =  VLOOKUP( $ObjectType.Rule__c.Fields.Name ,  $ObjectType.Rule__c.Fields.Name , Name),true,false )</errorConditionFormula>
        <errorMessage>Rule Name must be Unique</errorMessage>
    </validationRules>
</CustomObject>